--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,6 @@ services:
       dockerfile: docker/Dockerfile
     volumes:
       - ..:/usr/src/
+      - /usr/src/node_modules
     ports:
       - 3000:3000
-    # depends_on:
-    #   - web
