--- a/docker_prod/Dockerfile
+++ b/docker_prod/Dockerfile
@@ -1,27 +1,23 @@
 # analysis_report/docker/Dockerfile
 
 #pull official base-image
-FROM node:16-alpine
+FROM node:16-alpine as builder
 WORKDIR /usr/src/
 
 #add usr/src/app/node_modules/.bin to $PATH
 ENV PATH /usr/src/node_modules.bin:$PATH
 
 # ##install and cache app dependencies
-COPY package.json .
-COPY package-lock.json .
+COPY package*.json ./
+
 # #npm install
 RUN npm ci
-RUN npm install react-scripts@4.0.3 -g --silent
 
 #set environment
-# ARG REACT_APP_API_SERVICE_URL
-# ENV REACT_APP_API_SERVICE_URL $REACT_APP_API_SERVICE_URL
-# ARG NODE_ENV
-# ENV NODE_ENV $NODE_ENV
-
-# #start app
-# CMD ["npm", "start"]
+ARG REACT_APP_API_SERVICE_URL
+ENV REACT_APP_API_SERVICE_URL $REACT_APP_API_SERVICE_URL
+ARG NODE_ENV
+ENV NODE_ENV $NODE_ENV
 
 RUN npm run build
 
