--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       context: ../
       dockerfile: docker/Dockerfile
     volumes:
-      - ..:/usr/src/
-      - /usr/src/node_modules
+      - ../src:/usr/src/src
+      - ../public:/usr/src/public
+      # - /usr/src/node_modules
     ports:
       - 3000:3000
