--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "@aws-amplify/ui-react": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.27",
     "axios": "^0.27.2",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
