--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,21 +9,8 @@ services:
     volumes:
       - ../src:/usr/src/src
       - ../public:/usr/src/public
-      # - /usr/src/node_modules
+    env_file:
+      - ../app.env
     ports:
       - 3000:3000
-      # - 4000:3306
-    depends_on:
-      - db
-
-  db:
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile
-    volumes:
-      - ../src:/usr/src/src
-    command: node /usr/src/src/server/index.js
-    # command: npm run server
-    ports:
-      - 3306:3306
     
