--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.28",
     "axios": "^0.27.2",
     "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.6",
     "mysql2": "^2.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
